fixed alignment issue with clear completed btn

--- a/src/main.css
+++ b/src/main.css
@@ -216,4 +216,5 @@ h1 {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
 }
